--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@react-symbols/icons": "^1.2.10",
     "@vercel/analytics": "1.3.1",
     "ai": "latest",
     "autoprefixer": "^10.4.20",
