--- a/package.json
+++ b/package.json
@@ -54,12 +54,14 @@
     "next": "16.0.0",
     "next-themes": "^0.4.6",
     "openai": "^6.9.0",
+    "prism-react-renderer": "^2.4.1",
     "react": "19.2.0",
     "react-day-picker": "9.8.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
+    "react-syntax-highlighter": "^16.1.0",
     "recharts": "2.15.4",
     "shiki": "^3.15.0",
     "sonner": "^1.7.4",
