--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google/genai": "^1.29.1",
     "@hookform/resolvers": "^3.10.0",
+    "@prisma/client": "^6.19.0",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -42,6 +43,7 @@
     "@vercel/analytics": "1.3.1",
     "ai": "latest",
     "autoprefixer": "^10.4.20",
+    "better-auth": "^1.3.34",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -55,6 +57,7 @@
     "next-themes": "^0.4.6",
     "openai": "^6.9.0",
     "prism-react-renderer": "^2.4.1",
+    "prisma": "^6.19.0",
     "react": "19.2.0",
     "react-day-picker": "9.8.0",
     "react-dom": "19.2.0",
