--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@google/genai": "^1.29.1",
     "@hookform/resolvers": "^3.10.0",
+    "@polar-sh/better-auth": "^1.5.0",
+    "@polar-sh/sdk": "^0.41.5",
     "@prisma/client": "^6.19.0",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
@@ -43,7 +45,7 @@
     "@vercel/analytics": "1.3.1",
     "ai": "latest",
     "autoprefixer": "^10.4.20",
-    "better-auth": "^1.3.34",
+    "better-auth": "^1.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
