--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.29.1",
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^3.10.0",
     "@polar-sh/better-auth": "^1.5.0",
     "@polar-sh/sdk": "^0.41.5",
@@ -57,7 +58,7 @@
     "lucide-react": "^0.454.0",
     "next": "16.0.0",
     "next-themes": "^0.4.6",
-    "openai": "^6.9.0",
+    "openai": "^6.9.1",
     "prism-react-renderer": "^2.4.1",
     "prisma": "^6.19.0",
     "react": "19.2.0",
